[package]
name = "keyring"
version = "0.1.0"
edition = "2021"
authors = ["Jhaumg"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.22", features = ["derive"] }
eyre = "0.6.8"
keyring = "1.2.0"
rpassword = "7.0.0"
