[package]
name = "keyring"
version = "0.1.1"
edition = "2021"
authors = ["Jhaumg"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
derive = "1.0.0"
eyre = "0.6.8"
keyring = "1.2.0"
rpassword = "7.0.0"

