[package]
name = "keyring"
version = "0.1.1"
edition = "2021"
authors = ["Jhaumg"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
derive = "1"
eyre = "0.6.8"
keyring = "2.0.2"
rpassword = "7.2.0"

